crux-mir/test/symb_eval/crypto/bytes.good
test bytes/<DISAMB>::f[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- bytes/<DISAMB>::f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crypto/bytes.rs:85:7: 85:37: error: in bytes/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
[Crux]   	a[i] == b[i]
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crypto/bytes.rs:85:7: 85:37: error: in bytes/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
[Crux]   	a[i] == b[i]
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crypto/bytes.rs:85:7: 85:37: error: in bytes/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
[Crux]   	a[i] == b[i]
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crypto/bytes.rs:85:7: 85:37: error: in bytes/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
[Crux]   	a[i] == b[i]
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crypto/bytes.rs:85:7: 85:37: error: in bytes/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
[Crux]   	a[i] == b[i]

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 5
[Crux]   Proved: 0
[Crux]   Disproved: 5
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
